webcontent/css/main.scss
$headerHeight: 40px;
$headerZ: 10000;
$mapHolderZ: $headerZ / 2;
$mapBoundsZ: -1;

body {
    background-color: #888888;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    
    li {
        list-style-type: none;
    }
}

.icon {
    height: 15px;
    width: 15px;
}

.inlineHeader {
    margin: 0;
}

.splitLeft, .splitRight {
    width: 49%;
    position: absolute;
    box-sizing: border-box;
    padding: 10px;
    left: 0;
} 

.splitRight {
    right: 0;
}

.splitLeft {
    left: 0;
}

#headerHolder {
    position: fixed;
    left: 0;
    top: $headerHeight;
    width: 100vw;
    height: 56.25vw;
    max-height: calc(100vh - 40px);
    max-width: calc(177.78vh - 71.12px);
    margin: auto;
    top: -40px; bottom:0;
    left: 0; right:0;
    
    #header {
        box-sizing: border-box;
        position: absolute;
        left: 0;
        top: 0;
        height: $headerHeight;
        width: 100%;
        background-color: white;
        padding: 10px;
        background-color: #444444;
        -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
        -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
        box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);

        input {
            background-color: #444444;
        }

        * {
            color: white;
        }
    }
}

.modelList {
    position: relative;
    margin-right: 15px;
    display: inline-block;
    vertical-align: top;
}

.mfa-button {
    cursor: pointer;
    &:hover {
        color: #bbb;
    }
}

.mainBody {
    position: fixed;
    width: 100vw;
    height: 56.25vw;
    max-height: calc(100vh - 40px);
    max-width: calc(177.78vh - 71.12px);
    margin: auto;
    top: 40px; bottom:0;
    left:0; right:0;
    overflow: hidden;
}

#mapOuterDiv {
    height: 100%;
    width: 100%;
}

#mapBounds {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: $mapBoundsZ;
}

#mapHolder {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: $mapHolderZ;
}

#mapImage {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

#unitTypeFinder {
    width: 100px;
    background-color: white;
    
}

.dropdown {
    position: absolute;
}

.divisionMarker {
    position: absolute;
    text-shadow: 1px 1px 1px #000;
}

.add-button {
    float: right;
}

.routePoint {
    position: absolute;
}

.factionListItem, .unitTypeListItem {
    .editField {
        width: 7em;
    }
}

.unitTypeListItem {
    form {
        input[type=file] {
            width: 172px;
        }
    }
}

.factionListItem {
    .colorPicker {
        width: 20px;
        border: none;
    }
}

.divisionPane {
    background-color: rgba(44,44,44,0.5);
    width: 200px;
    min-height: 10px;
    box-shadow: 3px 4px 5px #444444;

    * {
        color: white;
    }

    input[type=text], input[type=button], select {
        background-color: #444444;
    }
    
    .closeButton {
        float: right;
    }

    .details {
        position: relative;
        
        .unitList {
            width: 100%;
            
            .unitListItem {
                .editField {
                    width: 50px;
                }
            }
        }
    }

    .routePlotter {
        position: relative;
    }
}

.controls {
    left: 0px;
    top: 0px;
    position: absolute;
    background-color: rgba(44,44,44,0.9);
    z-index: 10000;
    width: 100%;
    padding: 15px;

    & > div {
        position: relative;
        display: inline-block;
        margin-right: 10px;
        vertical-align: top;
    }

    input {
        background-color: #444444;
    }

    * {
        color: white;
    }
    
    form {
        display: inline;
        vertical-align: top;
    }

    -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
}

.shadow {
    z-index: 2 * $headerZ;
    position: absolute;
}

.verticalShadow {
    height: 100%;
    top: 0;
}

.horizontalShadow {
    width: 100%;
    left: 0;
}

.topShadow {
    box-shadow: 0px 2px 15px 5px #000;
    top: -2px;
}

.botShadow {
    box-shadow: 0px -2px 15px 5px #000;
    bottom: -2px;
}

.leftShadow {
    box-shadow: 2px 0 15px 5px #000;
    left: -2px;
}

.rightShadow {
    box-shadow: -2px 0 15px 5px #000;
    right: -2px;
}

